--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">RickandMorty</string>
+    <string name="home">Home</string>
     <string name="character">Character</string>
     <string name="location">Location</string>
     <string name="episode">Episode</string>
@@ -11,4 +12,5 @@
     <string name="episodes_textView">Appeared in Episodes:</string>
     <string name="button_moreInfo">More Information</string>
     <string name="characters_episode">Characters in this Episode</string>
+    <string name="no_characters">No characters in this episode.</string>
 </resources>
